--- a/daili.yaml
+++ b/daili.yaml
@@ -46,7 +46,7 @@ proxies:
   average: 9.17
   UpdateDay: '2022-06-12T12:31:23.267626'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 49043
+  Rank: 48893
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,7 +60,7 @@ proxies:
   average: 624.84
   UpdateDay: '2022-06-10T15:30:56.789059'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 43524
+  Rank: 43374
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -75,7 +75,7 @@ proxies:
   average: 29.08
   UpdateDay: '2022-06-13T12:31:43.184430'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 39046
+  Rank: 39126
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -90,7 +90,7 @@ proxies:
   average: 73.08
   UpdateDay: '2022-06-13T12:31:44.357036'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 37040
+  Rank: 37110
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -105,7 +105,7 @@ proxies:
   average: 92.86
   UpdateDay: '2022-06-13T12:31:44.429041'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 31073
+  Rank: 31103
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -120,7 +120,7 @@ proxies:
   average: 41.7
   UpdateDay: '2022-06-13T12:31:44.225682'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 27725
+  Rank: 27766
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -135,7 +135,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 26538
+  Rank: 26588
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -150,7 +150,7 @@ proxies:
   average: 39.93
   UpdateDay: '2022-06-13T12:31:45.386257'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 26156
+  Rank: 26256
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -162,7 +162,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 25926
+  Rank: 25976
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -174,7 +174,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 25071
+  Rank: 25166
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -189,7 +189,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 24750
+  Rank: 24850
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -202,7 +202,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 24632
+  Rank: 24482
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -217,7 +217,7 @@ proxies:
   average: 23.81
   UpdateDay: '2022-05-12T15:30:29.234708'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 23583
+  Rank: 23433
 - name: 101.91.121.247:50004@ss
   type: ss
   server: 101.91.121.247
@@ -230,7 +230,7 @@ proxies:
   average: 10.83
   UpdateDay: '2022-05-10T15:30:34.077769'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 21943
+  Rank: 21793
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   type: trojan
@@ -245,7 +245,7 @@ proxies:
   average: 44.63
   UpdateDay: '2022-06-13T12:30:45.229531'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 20544
+  Rank: 20594
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -260,7 +260,7 @@ proxies:
   average: 52.51
   UpdateDay: '2022-06-13T12:31:44.208418'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 18131
+  Rank: 18204
 - name: api.tcpbbr.net:443@trojan
   server: api.tcpbbr.net
   port: 443
@@ -275,7 +275,7 @@ proxies:
   average: 554.51
   UpdateDay: '2022-06-13T12:31:50.222960'
   PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 14923
+  Rank: 14935
 - name: hk31.ssgnode.ga:443@trojan
   server: hk31.ssgnode.ga
   port: 443
@@ -290,7 +290,7 @@ proxies:
   average: 42.56
   UpdateDay: '2022-06-13T12:31:44.177489'
   PFirstFoundDay: '2022-03-13T18:24:14.435896'
-  Rank: 14823
+  Rank: 14893
 - name: v.9051246.xyz:443@trojan
   server: v.9051246.xyz
   port: 443
@@ -305,32 +305,22 @@ proxies:
   average: 189.84
   UpdateDay: '2022-06-13T12:31:45.916522'
   PFirstFoundDay: '2022-03-12T03:12:46.740408'
-  Rank: 14422
-- alterId: 0
-  cipher: auto
-  http-opts:
-    headers:
-      Host:
-      - 35.153.162.49
-    method: GET
-    path:
-    - /
-  name: 35.153.162.49:27080@vmess
-  network: http
-  port: 27080
-  server: 35.153.162.49
+  Rank: 14472
+- name: api.mjj-home.com:443@trojan
+  server: api.mjj-home.com
+  port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
+  password: share.mjj-home.com
   skip-cert-verify: true
-  tls: false
-  type: vmess
   udp: true
-  uuid: 6334db00-f39b-49d7-d12a-2e3c037c5d97
   success_rate: 100.0
-  minimum: 234.33
-  maximum: 238.7
-  average: 236.71
-  UpdateDay: '2022-03-21T00:35:16.437700'
-  PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 13873
+  minimum: 147.17
+  maximum: 155.29
+  average: 150.53
+  UpdateDay: '2022-06-13T12:31:45.144693'
+  PFirstFoundDay: '2022-03-12T03:14:59.624344'
+  Rank: 13750
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -357,7 +347,7 @@ proxy-groups:
   - api.tcpbbr.net:443@trojan
   - hk31.ssgnode.ga:443@trojan
   - v.9051246.xyz:443@trojan
-  - 35.153.162.49:27080@vmess
+  - api.mjj-home.com:443@trojan
   tolerance: 250
 rule-providers:
   anting:
